--- a/MVITO/MVITO/Views/Page6.xaml
+++ b/MVITO/MVITO/Views/Page6.xaml
@@ -60,7 +60,7 @@
                         </Grid.RowDefinitions>
 
                         <ScrollViewer>
-                            <StackPanel Width="361" Height="679" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="71,10,0,0" >
+                            <StackPanel Width="361" Height="auto" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="71,10,0,0" Background="AliceBlue" >
                                 <TextBlock Visibility="Collapsed"  Name="avisoc" Foreground="#FF3734B4" Margin="10" FontSize="18" FontStyle="Normal" HorizontalAlignment="Center" ></TextBlock>
                                 <GridViewHeaderItem Content="Registro de Compras" VerticalAlignment="Top" Margin="0,10"/>
                                 <TextBlock TextWrapping="Wrap" Margin="10, 1" Text="Ingrese toda compra de productos realizados como materia prima, material de aseo, artuclos del negocio o productos para ventas"/>
@@ -178,199 +178,7 @@
 
             </PivotItem>
 
-            <PivotItem Header="Empleados">
-
-
-                <Grid>
-                    <Grid.Background>
-                        <ImageBrush
-                    ImageSource="/Icons/empleados.png" Stretch="None"/>
-                    </Grid.Background>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-
-
-
-
-                    <Grid Grid.Column="0">
-
-                        <ScrollViewer>
-                            <StackPanel Width="360" Height="570" HorizontalAlignment="Center" Margin="0,41,0,0" Background="#CCF4F3F3" >
-
-                                <GridViewHeaderItem Content="Registro de Empleados" VerticalAlignment="Top" Margin="0,10"/>
-                                <TextBlock TextWrapping="Wrap" Margin="10" Text="Registro a cada uno de sus empleados para llevar un control total de su planilla. Esto incluye deducciones a empleados, pagos de horas extras e ingresos y egresos extras"/>
-                                <TextBlock TextWrapping="Wrap" Margin="10" Text="Datos Generales" FontSize="15" HorizontalAlignment="Center"/>
-
-                                <TextBox Name="IDempleado" Margin="10,0" Header="Identificacion" PlaceholderText="Ingrese numero de identidad del empleado"/>
-                                <TextBox Name="nomempleado" Margin="10,0" Header="Nombre Completo" PlaceholderText="Ingrese el nombre del empleado"/>
-                                <DatePicker Name="nacempleado" Header="Fecha de nacimiento" Margin="10,0" Width="337"></DatePicker>
-                                <ComboBox Name="genempleado" Margin="10,0" Header="Genero" Width="337" PlaceholderText="Escoja el genero del empleado">
-                                    <x:String>Masculino</x:String>
-                                    <x:String>Femenino</x:String>
-                                </ComboBox>
-                                <DatePicker Name="iniempleado" Header="Fecha de Inicio" Margin="10,0" Width="337"></DatePicker>
-                                <TextBox Name="domempleado" Margin="10,0" Header="Domicilio del empleado" PlaceholderText="Ingrese el domicilio del empleado"/>
-
-
-                            </StackPanel>
-                        </ScrollViewer>
-                    </Grid>
-
-
-
-                    <Grid Grid.Column="1">
-
-
-                        <ScrollViewer>
-                        <StackPanel Width="360" Height="560" HorizontalAlignment="Left" Margin="112,54,0,10" Background="#CCF4F3F3">
-                            <TextBlock TextWrapping="Wrap" Margin="10" Text="Datos del puesto" FontSize="15" HorizontalAlignment="Center"/>
-
-                            <TextBox Name="Salarioempleado" Margin="10,3" Header="Salario" PlaceholderText="Ingrese el salario de su empleado"/>
-
-                           
-
-
-
-                            <TimePicker  Name="cbxentrada" Margin="10,3" ClockIdentifier="24HourClock" Header="Hora de entrada" />
-                            <TimePicker Name="Cbxsalida" Margin="10,3"  ClockIdentifier="24HourClock" Header="Hora de Salida" />
-
-
-                            <TextBox Name="puestoempleado" Margin="10,3" Header="Puesto" PlaceholderText="Ingrese el puesto de trabajo del empleado"/>
-                            <TextBox Name="comentarioempleado" Margin="10,3" Header="Comentarios" PlaceholderText="Añada convenios o acuerdos con el empleado"/>
-                            
-                             <DatePicker  Name="durampleado" Header="Duracion del contrato" Margin="10,0" ></DatePicker>
-                            <TextBlock TextWrapping="Wrap" Margin="10,0" Text="Marque la casilla si la duracion del contrato sera indefinida" FontSize="15"></TextBlock>
-                            <CheckBox Name="Indefinido" Margin="10,0" Content="Contrato Indefinido" Foreground="Aqua"></CheckBox>
-                                
-                            
-                            <Button x:Name="IngresoEmpleado" Margin="10,20"  Height="40" Width="338" Content="Guardar" HorizontalAlignment="Center" Background="CornflowerBlue" Click="IngresoEmpleado_Click" />
-
-                        </StackPanel>
-                        </ScrollViewer>
-
-                    </Grid>
-
-                </Grid>
-
-
-
-            </PivotItem>
-
-            <PivotItem Name="emple" Header="Extras Empleados">
-
-
-
-                <Grid>
-                    <Grid.Background>
-                        <ImageBrush
-                    ImageSource="/Icons/monedas.png" Stretch="Uniform" Opacity="0.3">
-                            <ImageBrush.Transform>
-                                <CompositeTransform TranslateY="150"/>
-                            </ImageBrush.Transform>
-                        </ImageBrush>
-                    </Grid.Background>
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-
-
-                    <Grid Grid.Column="0">
-                        <ScrollViewer>
-                        <StackPanel HorizontalAlignment="Center" Width="600">
-                            <TextBlock HorizontalAlignment="Center" Margin="5" FontSize="18">Seleccion al(los) empleados deseados</TextBlock>
-                                <StackPanel Orientation="Horizontal" MaxWidth="500" HorizontalAlignment="Center">
-                                    <TextBlock Name="probando" Margin="10,0" Text="Buscar Empleado" VerticalAlignment="Center"></TextBlock>
-                                    <TextBox Name="Buscadorempleado" Margin="10,0" Width="250" />
-                                    <Button Name="btnsearchempleados" Margin="5,0" Content="buscar" Click="Btnsearchempleados_Click"></Button>
-                                </StackPanel>
-                                <TextBlock></TextBlock>
-                                <ListView Name="listaempleados" Margin="10"  ItemClick="Listaempleados_ItemClick" SelectionMode="Single" IsItemClickEnabled="True"  >
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid>
-                                        <StackPanel Orientation="Horizontal" Margin="50">
-                                            <PersonPicture Height="60" Width="60" DisplayName="{Binding NmEmp}"></PersonPicture>
-                                            <StackPanel Margin="10" Orientation="Vertical">
-                                                <TextBlock Text="{Binding IDemp}"></TextBlock>
-                                                <TextBlock Text="{Binding NmEmp}"></TextBlock>
-                                                <TextBlock Text="{Binding PstEmp}"></TextBlock>
-                                                <TextBlock Text="{Binding SalEmp}"></TextBlock>
-                                            </StackPanel>
-                                        </StackPanel>
-                                    </Grid>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                            
-
-                        </ListView>
-                        </StackPanel>
-                        </ScrollViewer>
-
-                    </Grid>
-
-                    <Grid Grid.Column="1">
-                        
-
-                        <StackPanel  Height="40px" Margin="0,0,0,520">
-                            <ComboBox x:Name="Tipoextra"   Width="300" Height="40" PlaceholderText="Escoja el tipo de Ingreso/Egreso" HorizontalAlignment="Center" SelectionChanged="Tipoextra_SelectionChanged">
-                                <x:String>Horas Extras</x:String>
-                                <x:String>Ingresos extras</x:String>
-                                <x:String>Egresos Extras</x:String>
-                            </ComboBox>
-
-                        </StackPanel>
-
-                        <StackPanel Name="stackhx" Width="400" Margin="0,150" Visibility="Collapsed" Background="#CCF4F3F3" CornerRadius="20">
-
-                            <TextBlock FontSize="20" Margin="10" HorizontalAlignment="Center">Ingreso de horas extras</TextBlock>
-                            <TimePicker Name="hx1" Margin="10" ClockIdentifier="24HourClock" Header="Desde las" MinuteIncrement="0" />
-                            <TimePicker Name="hx2" Margin="10" ClockIdentifier="24HourClock" Header="Hasta las" MinuteIncrement="0" />
-
-                            <DatePicker Name="hxfch" Margin="10" Header="Fecha"></DatePicker>
-
-                            <Button Name="botonhx" Margin="10" HorizontalAlignment="Center" Click="Botonhx_Click" Background="CornflowerBlue">Ingresar Horas extras</Button>
-
-                        </StackPanel>
-
-                        <StackPanel Name="stackin" Width="350" Margin="0,150" Visibility="Collapsed" Background="#CCF4F3F3">
-
-                            <TextBlock Margin="10" HorizontalAlignment="Center">Ingreso Extra</TextBlock>
-                            <TextBox Name="ixdescripcion" Margin="10" PlaceholderText="Ingrese la descripccion del ingreso" Header="Descripcion del ingreso"></TextBox>
-                            <TextBox Name="ixtotal" Margin="10" Header="Total efectivo" PlaceholderText="Ingrese el total a pagar"></TextBox>
-                            <DatePicker Name="ixfch" Margin="10" Header="Fecha"></DatePicker>
-
-                            <Button Name="ixingreso" Margin="10" HorizontalAlignment="Center" Background="CornflowerBlue" Click="Ixingreso_Click">Ingresar Ingreso extras</Button>
-
-                        </StackPanel>
-
-                       
-                            <StackPanel Name="stackeg" Width="400" Margin="0,150"  Visibility="Collapsed" Background="#CCF4F3F3">
-
-                            
-                                
-                                <TextBlock Margin="10" HorizontalAlignment="Center">Egreso Extra</TextBlock>
-                                <ToggleSwitch Name="diaperdido" OnContent="Dia perdido" OffContent="Dia perdido" Margin="10" IsEnabled="False" Toggled="Diaperdido_Toggled"/>
-                            <TextBox Name="exdescripcion" Margin="10" PlaceholderText="Ingrese la descripccion del egreso" Header="Descripcion del egreso"></TextBox>
-                                <TextBox Name="extotal" Margin="10" Header="Total efectivo" PlaceholderText="Ingrese el total a pagar"></TextBox>
-                                <DatePicker Name="exfch" Margin="10" Header="Fecha"></DatePicker>
-
-                                <Button Name="exingreso" Margin="10" HorizontalAlignment="Center" Background="CornflowerBlue" Click="Exingreso_Click">Ingresar Egreso extras</Button>
-                           
-
-                        </StackPanel>
-                        
-
-
-                    </Grid>
-                </Grid>
-
-
-
-            </PivotItem>
+            
 
 
         </Pivot>
