--- a/MVITO/MVITO/Views/Page4.xaml
+++ b/MVITO/MVITO/Views/Page4.xaml
@@ -10,7 +10,7 @@
 
     <Page.Resources>
 
-        <Flyout x:Name="FlyoutMss" Placement="Top">
+        <Flyout x:Name="FlyoutMss" Placement="Top" >
 
             <Flyout.FlyoutPresenterStyle>
                 <Style TargetType="FlyoutPresenter">
@@ -19,9 +19,9 @@
             </Flyout.FlyoutPresenterStyle>
 
 
-            <StackPanel >
+            <StackPanel MaxWidth="350" MaxHeight="200" >
                 <Image></Image>
-                <TextBlock Name="mensaje"></TextBlock>
+                <TextBlock TextWrapping="Wrap"  Name="mensaje"></TextBlock>
 
             </StackPanel>
         </Flyout>
@@ -53,6 +53,7 @@
                             <StackPanel Width="360" Height="570" HorizontalAlignment="Center" Margin="0,41,0,0" Background="#CCF4F3F3" >
 
                                 <GridViewHeaderItem Content="Registro de Empleados" VerticalAlignment="Top" Margin="0,10"/>
+                                <TextBlock Name="test"></TextBlock>
                                 <TextBlock TextWrapping="Wrap" Margin="10" Text="Registro a cada uno de sus empleados para llevar un control total de su planilla. Esto incluye deducciones a empleados, pagos de horas extras e ingresos y egresos extras"/>
                                 <TextBlock TextWrapping="Wrap" Margin="10" Text="Datos Generales" FontSize="15" HorizontalAlignment="Center"/>
 
@@ -120,7 +121,7 @@
                 <Grid>
                     <Grid.Background>
                         <ImageBrush
-                    ImageSource="/Icons/reloj.jpg" Stretch="Uniform" Opacity="0.3">
+                    ImageSource="/Icons/reloj.png" Stretch="Uniform" Opacity="0.3">
                             <ImageBrush.Transform>
                                 <CompositeTransform />
                             </ImageBrush.Transform>
